ya se puede asignar materias de manera dinamica al horario

--- a/src/app/Components/dialog/asignar-materia/asignar-materia.component.html
+++ b/src/app/Components/dialog/asignar-materia/asignar-materia.component.html
@@ -1,11 +1,21 @@
-<h1 mat-dialog-title>Hi {{data.name}}</h1>
+<h1 mat-dialog-title>
+ {{data.materia}} <br>
+ <h6> {{data.dia}} - {{data.hora.hora}}</h6> 
+</h1>
 <div mat-dialog-content>
-  <p>What's your favorite animal?</p>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.animal">
-  </mat-form-field>
+    <label >Seleccionar materia</label>
+  
+    <mat-radio-group
+    aria-labelledby="Materias"
+    class="materias-radio"
+    [(ngModel)]="materiaSelected">
+    <mat-radio-button class="example-radio-button" *ngFor="let materia of materias" [value]="materia">
+      {{materia}}
+    </mat-radio-button>
+  </mat-radio-group>
 </div>
+
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
+  <button mat-button  cdkFocusInitial (click)="SaveMateria(data)">Ok</button>
 </div>
