--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="BarraMenu" class="blue darken-4 white-text"> 
         <button mat-icon-button color="white-text" class="btn-menu-sidenav hide-on-large-only" (click)="ToggleSidenav()">
-                <mat-icon>menu</mat-icon>
+                <mat-icon>menu_open</mat-icon>
               </button>
               
               Oferta academica   </mat-toolbar>
