--- a/src/app/Components/horario/horario.component.html
+++ b/src/app/Components/horario/horario.component.html
@@ -12,37 +12,37 @@
   <!-- Name Column -->
   <ng-container matColumnDef="Lunes">
     <th mat-header-cell *matHeaderCellDef> Lunes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,hora.lunes)"> {{hora.lunes}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'L',hora.lunes)"> {{hora.lunes}} </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="Martes">
     <th mat-header-cell *matHeaderCellDef> Martes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'martes')" > {{hora.martes}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'M',hora.martes)" > {{hora.martes}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="Miercoles">
     <th mat-header-cell *matHeaderCellDef> Miercoles </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,hora.miercoles)"> {{hora.miercoles}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'X',hora.miercoles)"> {{hora.miercoles}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Jueves">
     <th mat-header-cell *matHeaderCellDef> Jueves </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,hora.jueves)"> {{hora.jueves}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'J',hora.jueves)"> {{hora.jueves}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Viernes">
     <th mat-header-cell *matHeaderCellDef> Viernes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,hora.viernes)"> {{hora.viernes}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'V',hora.viernes)"> {{hora.viernes}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Sabado">
     <th mat-header-cell *matHeaderCellDef> Sabado </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,hora.sabado)"> {{hora.sabado}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'S',hora.sabado)"> {{hora.sabado}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
