--- a/src/app/Components/horario/horario.component.html
+++ b/src/app/Components/horario/horario.component.html
@@ -1,3 +1,25 @@
+<mat-expansion-panel [expanded]="true">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      Informacion
+    </mat-panel-title>
+    <mat-panel-description>
+      Informacion a detalle de la seccion
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+ 
+<div>
+  <span>Carrera: {{info.carrera}}</span><br>
+  <span>Turno: {{info.turno}}</span> <br>
+  <span>Seccion Siceu: {{info.seccion}}</span> <br>
+  <span>Semestre: {{info.semestre}}</span> <br>
+
+</div>
+
+
+</mat-expansion-panel>
+
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
@@ -12,39 +34,56 @@
   <!-- Name Column -->
   <ng-container matColumnDef="Lunes">
     <th mat-header-cell *matHeaderCellDef> Lunes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'L',hora.lunes)"> {{hora.lunes}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'L',hora.lunes)"> {{getNameOfMateria(hora.lunes)}}</td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="Martes">
     <th mat-header-cell *matHeaderCellDef> Martes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'M',hora.martes)" > {{hora.martes}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'M',hora.martes)" > {{getNameOfMateria(hora.martes)}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="Miercoles">
     <th mat-header-cell *matHeaderCellDef> Miercoles </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'X',hora.miercoles)"> {{hora.miercoles}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'X',hora.miercoles)"> {{getNameOfMateria(hora.miercoles)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Jueves">
     <th mat-header-cell *matHeaderCellDef> Jueves </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'J',hora.jueves)"> {{hora.jueves}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'J',hora.jueves)"> {{getNameOfMateria(hora.jueves)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Viernes">
     <th mat-header-cell *matHeaderCellDef> Viernes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'V',hora.viernes)"> {{hora.viernes}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'V',hora.viernes)"> {{getNameOfMateria(hora.viernes)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Sabado">
     <th mat-header-cell *matHeaderCellDef> Sabado </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'S',hora.sabado)"> {{hora.sabado}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'S',hora.sabado)"> {{getNameOfMateria(hora.sabado)}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<mat-expansion-panel [expanded]="true">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      Materias
+    </mat-panel-title>
+    <mat-panel-description>
+      Materias disponibles
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+ 
+<div>
+  aqui van las materias
+</div>
+
+
+</mat-expansion-panel>
