--- a/src/app/Components/dialog/asignar-materia/asignar-materia.component.html
+++ b/src/app/Components/dialog/asignar-materia/asignar-materia.component.html
@@ -19,3 +19,5 @@
   <button mat-button (click)="onNoClick()">No Thanks</button>
   <button mat-button  cdkFocusInitial (click)="SaveMateria(data)">Ok</button>
 </div>
+
+<!-- Modificado por DIOS -->
