--- a/src/app/Components/materias/materias.component.html
+++ b/src/app/Components/materias/materias.component.html
@@ -38,6 +38,17 @@
             </div>   
           </div>
         </div>
+
+
+        <div class="input-field col s6">
+          <input formControlName="semestre_mat" id="polla" type="text" class="validate">
+          <label for="polla">Semestre</label>
+          <div *ngIf="semestre_mat.invalid && (semestre_mat.dirty || semestre_mat.touched)" class=" red-text  text-darken-4" >
+            <div *ngIf="semestre_mat.errors.max" >
+              El semestre no puede llevar mas 3 digitos
+            </div>   
+          </div>
+        </div>
         
       </div>
       
@@ -126,6 +137,11 @@
   <ng-container matColumnDef="materia">
     <th mat-header-cell *matHeaderCellDef> Materia </th>
     <td mat-cell *matCellDef="let materia"> {{materia.nombre_mat}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="semestre">
+    <th mat-header-cell *matHeaderCellDef> semestre </th>
+    <td mat-cell *matCellDef="let materia"> {{materia.semestre_mat}} </td>
   </ng-container>
 
   <!-- Weight Column -->
