--- a/src/app/Components/horario/horario.component.html
+++ b/src/app/Components/horario/horario.component.html
@@ -20,7 +20,7 @@
 </mat-expansion-panel>
 
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="HorarioData" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -67,8 +67,8 @@
     <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'S',hora.sabado)"> {{getNameOfMateria(hora.sabado)}} </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-header-row *matHeaderRowDef="columnasHorario"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnasHorario;"></tr>
 </table>
 
 <mat-expansion-panel [expanded]="true">
@@ -81,9 +81,54 @@
     </mat-panel-description>
   </mat-expansion-panel-header>
  
-<div>
-  aqui van las materias
-</div>
+
+  <div class="container-fluid">
+
+    
+      <table mat-table [dataSource]="MateriasData" class="mat-elevation-z8">
+
+          <ng-container matColumnDef="codigo"> 
+              <th mat-header-cell *matHeaderCellDef> Codigo </th>
+              <td mat-cell *matCellDef="let materia"> {{materia.codigo_materia}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="materia">
+              <th mat_header-cell *matHeaderCellDef> Materia </th>
+              <td mat-cell *matCellDef="let materia"> {{materia.nombre_mat}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="profesor">
+              <th mat_header-cell *matHeaderCellDef> Profesor </th>
+              <td mat-cell *matCellDef="let materia"> En proceso </td>
+            </ng-container>
+            
+            <ng-container matColumnDef="h_t">
+              <th mat_header-cell *matHeaderCellDef> Horas Teoricas </th>
+              <td mat-cell *matCellDef="let materia"> {{materia.horas_teo}} </td>
+            </ng-container>
+           
+            <ng-container matColumnDef="h_p">
+              <th mat_header-cell *matHeaderCellDef> Horas Practicas </th>
+              <td mat-cell *matCellDef="let materia"> {{materia.horas_pra}} </td>
+            </ng-container>
+              
+              <ng-container matColumnDef="h_l">
+                <th mat_header-cell *matHeaderCellDef> Horas Laboratorio </th>
+                <td mat-cell *matCellDef="let materia"> {{materia.horas_lab}} </td>
+              </ng-container>
+    
+              <ng-container matColumnDef="h_tot">
+                <th mat_header-cell *matHeaderCellDef> Horas Totales </th>
+                <td mat-cell *matCellDef="let materia"> {{materia.horas_teo + materia.horas_pra + materia.horas_lab}} </td>
+              </ng-container>
+    
+              <tr mat-header-row *matHeaderRowDef="columnasMaterias"></tr>
+              <tr mat-row *matRowDef="let row; columns: columnasMaterias;"></tr>
+      </table>
+    
+
+  </div>
+  
 
 
 </mat-expansion-panel>
