--- a/src/app/Components/inicio/inicio.component.css
+++ b/src/app/Components/inicio/inicio.component.css
@@ -1,3 +1,10 @@
-element {
-    background-color: aqua;
+.imgbg{
+    background: url('../../../assets/images/clouds-cloudy-cold-167699.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+     -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+
 }
