--- a/src/app/Components/materias/materias.component.css
+++ b/src/app/Components/materias/materias.component.css
@@ -16,3 +16,9 @@
     border-bottom: 1px solid rgb(15, 90, 160) ;
     box-shadow: 0 1px 0 0 rgb(15, 90, 160) ;
   }
+
+
+
+ .select_per{
+   margin-top: 20px;
+ }
