Ya se puede asignar profesores a las materias

--- a/src/app/Components/horario/horario.component.html
+++ b/src/app/Components/horario/horario.component.html
@@ -34,37 +34,37 @@
   <!-- Name Column -->
   <ng-container matColumnDef="Lunes">
     <th mat-header-cell *matHeaderCellDef> Lunes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'L',hora.lunes)"> {{getNameOfMateria(hora.lunes)}}</td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'L',hora.lunes)"> {{getNameOfMateriaById(hora.lunes)}}</td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="Martes">
     <th mat-header-cell *matHeaderCellDef> Martes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'M',hora.martes)" > {{getNameOfMateria(hora.martes)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'M',hora.martes)" > {{getNameOfMateriaById(hora.martes)}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="Miercoles">
     <th mat-header-cell *matHeaderCellDef> Miercoles </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'X',hora.miercoles)"> {{getNameOfMateria(hora.miercoles)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'X',hora.miercoles)"> {{getNameOfMateriaById(hora.miercoles)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Jueves">
     <th mat-header-cell *matHeaderCellDef> Jueves </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'J',hora.jueves)"> {{getNameOfMateria(hora.jueves)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'J',hora.jueves)"> {{getNameOfMateriaById(hora.jueves)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Viernes">
     <th mat-header-cell *matHeaderCellDef> Viernes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'V',hora.viernes)"> {{getNameOfMateria(hora.viernes)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'V',hora.viernes)"> {{getNameOfMateriaById(hora.viernes)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Sabado">
     <th mat-header-cell *matHeaderCellDef> Sabado </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'S',hora.sabado)"> {{getNameOfMateria(hora.sabado)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'S',hora.sabado)"> {{getNameOfMateriaById(hora.sabado)}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnasHorario"></tr>
@@ -81,46 +81,48 @@
     </mat-panel-description>
   </mat-expansion-panel-header>
  
-
+  <button class="btn waves-effect waves-light  light-blue darken-4" type="submit" (click)="openDialogMateriaSec()">Agregar
+      <i class="material-icons right">add</i>
+    </button>
   <div class="container-fluid">
 
     
       <table mat-table [dataSource]="MateriasData" class="mat-elevation-z8">
 
-          <ng-container matColumnDef="codigo"> 
-              <th mat-header-cell *matHeaderCellDef> Codigo </th>
-              <td mat-cell *matCellDef="let materia"> {{materia.codigo_materia}} </td>
+          <ng-container matColumnDef="id"> 
+              <th mat-header-cell *matHeaderCellDef class="header-table"> ID </th>
+              <td mat-cell *matCellDef="let materia"> {{materia.id_mat_sec}} </td>
             </ng-container>
     
-            <ng-container matColumnDef="materia">
-              <th mat_header-cell *matHeaderCellDef> Materia </th>
-              <td mat-cell *matCellDef="let materia"> {{materia.nombre_mat}} </td>
+            <ng-container matColumnDef="materia" >
+              <th mat_header-cell *matHeaderCellDef  class="header-table"> Materia </th>
+              <td mat-cell *matCellDef="let materia"> {{getNameOfMateria(materia.codigo_materia)}} </td>
             </ng-container>
     
-            <ng-container matColumnDef="profesor">
-              <th mat_header-cell *matHeaderCellDef> Profesor </th>
-              <td mat-cell *matCellDef="let materia"> En proceso </td>
+            <ng-container matColumnDef="profesor"  class="header-table">
+              <th mat_header-cell *matHeaderCellDef class="header-table"> Profesor </th>
+              <td mat-cell *matCellDef="let materia"  > {{getNameOfProfesor(materia.ci_profesor)}} </td>
             </ng-container>
             
-            <ng-container matColumnDef="h_t">
-              <th mat_header-cell *matHeaderCellDef> Horas Teoricas </th>
+            <!-- <ng-container matColumnDef="h_t">
+              <th mat_header-cell *matHeaderCellDef  class="header-table"> Horas Teoricas </th>
               <td mat-cell *matCellDef="let materia"> {{materia.horas_teo}} </td>
             </ng-container>
            
             <ng-container matColumnDef="h_p">
-              <th mat_header-cell *matHeaderCellDef> Horas Practicas </th>
+              <th mat_header-cell *matHeaderCellDef  class="header-table"> Horas Practicas </th>
               <td mat-cell *matCellDef="let materia"> {{materia.horas_pra}} </td>
             </ng-container>
               
               <ng-container matColumnDef="h_l">
-                <th mat_header-cell *matHeaderCellDef> Horas Laboratorio </th>
+                <th mat_header-cell *matHeaderCellDef  class="header-table"> Horas Laboratorio </th>
                 <td mat-cell *matCellDef="let materia"> {{materia.horas_lab}} </td>
               </ng-container>
     
               <ng-container matColumnDef="h_tot">
-                <th mat_header-cell *matHeaderCellDef> Horas Totales </th>
+                <th mat_header-cell *matHeaderCellDef  class="header-table"> Horas Totales </th>
                 <td mat-cell *matCellDef="let materia"> {{materia.horas_teo + materia.horas_pra + materia.horas_lab}} </td>
-              </ng-container>
+              </ng-container> -->
     
               <tr mat-header-row *matHeaderRowDef="columnasMaterias"></tr>
               <tr mat-row *matRowDef="let row; columns: columnasMaterias;"></tr>
@@ -129,6 +131,7 @@
 
   </div>
   
+ 
 
 
 </mat-expansion-panel>
