--- a/src/app/Components/dialog/asignar-materia/asignar-materia.component.html
+++ b/src/app/Components/dialog/asignar-materia/asignar-materia.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>
- {{getNameOfMateria(data.materia) }} <br>
+ {{getNameOfMateriaById(data.materia) }} <br>
  <h6> {{data.dia}} - {{data.hora.hora}}</h6> 
 </h1>
 <div mat-dialog-content>
@@ -9,8 +9,8 @@
     aria-labelledby="Materias"
     class="materias-radio"
     [(ngModel)]="materiaSelected">
-    <mat-radio-button class="example-radio-button" *ngFor="let materia of materias" [value]="materia.codigo_materia">
-      {{materia.nombre_mat}}
+    <mat-radio-button class="example-radio-button" *ngFor="let materia of materiasPS" [value]="materia.id_mat_sec">
+        {{getNameOfMateria(materia.codigo_materia)}}
     </mat-radio-button>
   </mat-radio-group>
 </div>
