--- a/src/app/Components/horario/horario.component.css
+++ b/src/app/Components/horario/horario.component.css
@@ -28,17 +28,35 @@ td.mat-cell:hover {
     border-color:  gainsboro;
     text-align: center;
     background-color: rgb(42, 131, 190);
-    font-size: 18px;
+    font-size: 16px;
     width: 14%;
     color: white;
+    font-weight: 300 !important;
   }
 
   tr.mat-footer-row, tr.mat-row {
     height: 35px;
 }
 
+
+
 tr.mat-header-row {
   height: 45px;
+}
+
+
+.header-table {
+  padding: 0px !important;
+  border-style: solid;
+  border-width: 1px;
+  border-color:  gainsboro;
+  text-align: center;
+  background-color: rgb(42, 131, 190);
+  font-size: 18px !important;
+  width: 14%;
+  color: white;
+  height: 45px;
+
 }
 
 
