hare una prueba importante

--- a/src/app/Components/horario/horario.component.html
+++ b/src/app/Components/horario/horario.component.html
@@ -11,7 +11,7 @@
 <div>
   <span>Carrera: {{info.carrera}}</span><br>
   <span>Turno: {{info.turno}}</span> <br>
-  <span>Seccion Siceu: {{info.seccion}}</span> <br>
+  <span>Seccion Siceu: {{info.codigo_siceu}}</span> <br>
   <span>Semestre: {{info.semestre}}</span> <br>
 
 </div>
