agregada la funcionalidad de asignar aula

--- a/src/app/Components/dialog/asignar-materia/asignar-materia.component.html
+++ b/src/app/Components/dialog/asignar-materia/asignar-materia.component.html
@@ -17,7 +17,7 @@
 
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button  cdkFocusInitial (click)="SaveMateria(data)">Ok</button>
+  <button mat-button  cdkFocusInitial [disabled]="!materiaSelected" (click)="SaveMateria(data)">Ok</button>
 </div>
 
 <!-- Modificado por DIOS -->
