--- a/src/app/Components/horario/horario.component.html
+++ b/src/app/Components/horario/horario.component.html
@@ -11,10 +11,10 @@
 <div>
   <span>Carrera: {{info.carrera}}</span><br>
   <span>Turno: {{info.turno}}</span> <br>
-  <span>Seccion Siceu: {{info.codigo_siceu}}</span> <br>
-  <span>Semestre: {{info.semestre}} <button *ngIf="info.Semestre == null"  class="btn waves-effect waves-light  light-blue darken-4" type="submit" (click)="openDialogSemestreSec(info)">
+  <span>Seccion Siceu: {{info.codigo_siceu}} <button *ngIf="info.codigo_siceu == null"  class="btn waves-effect waves-light  light-blue darken-4" type="submit" (click)="openDialogSemestreSec(info)">
     <i class="material-icons right">add</i>
   </button>  </span> <br>
+  <span>Semestre: {{info.semestre}} </span> <br>
   <span>Aula: {{info.Aula}} <button *ngIf="info.Aula == null" class="btn waves-effect waves-light  light-blue darken-4" type="submit" (click)="openDialogAulasSec(info)">Asignar
     <i class="material-icons right">add</i>
   </button>  </span> <br>
