solo le quite el frame y puse botones personalizados, ahh y ahora se comunica el angular con el electron

--- a/src/app/Components/dialog/asignar-materia-seccion/asignar-materia-seccion.component.html
+++ b/src/app/Components/dialog/asignar-materia-seccion/asignar-materia-seccion.component.html
@@ -31,7 +31,7 @@
                 <mat-label>Profesores</mat-label>
                 <mat-select formControlName="ci_profesor">
                   <mat-option *ngFor="let profesor of profesoresDisponibles" [value]="profesor.ci_profesor">
-                    CI: {{ profesor.ci_profesor }} - {{ profesor.nombre_profesor }} {{ profesor.apellido_profesor}} 
+                    CI: {{ profesor.ci_profesor }} - {{ profesor.nom_prof }} {{ profesor.ape_prof}} 
                   </mat-option>
                 </mat-select>
               </mat-form-field>
