--- a/src/app/Components/profesores/profesores.component.html
+++ b/src/app/Components/profesores/profesores.component.html
@@ -35,13 +35,13 @@
         
         
         <div class="input-field col s6">
-          <input formControlName="correo_profesor" id="correo" type="email" class="validate">
+          <input formControlName="cor_prof" id="correo" type="email" class="validate">
           <label for="correo">Correo</label>
-          <div *ngIf="correo_profesor.invalid && (correo_profesor.dirty || correo_profesor.touched)" class=" red-text  text-darken-4" >
-            <div *ngIf="correo_profesor.errors.required"  >
+          <div *ngIf="cor_prof.invalid && (cor_prof.dirty || cor_prof.touched)" class=" red-text  text-darken-4" >
+            <div *ngIf="cor_prof.errors.required"  >
               El Correo es requerido.
             </div> 
-            <div *ngIf="correo_profesor.errors.email"  >
+            <div *ngIf="cor_prof.errors.email"  >
               El Correo tiene un formato erroneo. ejemplo "pedro@gmail.com"
             </div>     
           </div>
@@ -51,26 +51,37 @@
       
       
       <div class="row">
-        <div class="input-field col s6">
-          <input formControlName="nombre_profesor" id="nombre" type="text" min="0" max="4" class="validate" value="0">
+        <div class="input-field col s4">
+          <input formControlName="nom_prof" id="nombre" type="text" min="0" max="4" class="validate" value="0">
           <label for="nombre">Nombre</label>
-          <div *ngIf="nombre_profesor.invalid && (nombre_profesor.dirty || nombre_profesor.touched)" class=" red-text  text-darken-4" >
-            <div *ngIf="nombre_profesor.errors.required"  >
+          <div *ngIf="nom_prof.invalid && (nom_prof.dirty || nom_prof.touched)" class=" red-text  text-darken-4" >
+            <div *ngIf="nom_prof.errors.required"  >
               El nombre es requerido
             </div>  
           </div>
         </div>
       
       
-        <div class="input-field col s6">
-          <input formControlName="apellido_profesor" id="apellido" type="text" min="0" max="4" class="validate" value="0">
+        <div class="input-field col s4">
+          <input formControlName="ape_prof" id="apellido" type="text" min="0" max="4" class="validate" value="0">
           <label for="apellido">Apellido</label>
-          <div *ngIf="apellido_profesor.invalid && (apellido_profesor.dirty || apellido_profesor.touched)" class=" red-text  text-darken-4" >
-            <div *ngIf="apellido_profesor.errors.required"  >
+          <div *ngIf="ape_prof.invalid && (ape_prof.dirty || ape_prof.touched)" class=" red-text  text-darken-4" >
+            <div *ngIf="ape_prof.errors.required"  >
               El apellido es requerido
             </div>  
           </div>
         </div>
+
+        <div class="input-field col s4">
+            <mat-form-field>
+                <mat-label>Horas estipuladas</mat-label>
+                <mat-select formControlName="horas_est">
+                  <mat-option *ngFor="let tipo of tipos" [value]="tipo.value">
+                    {{tipo.nombre}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+          </div>
       
         
       </div>
@@ -102,20 +113,25 @@
 
   <ng-container matColumnDef="nom_prof">
     <th mat-header-cell *matHeaderCellDef> Nombre </th>
-    <td mat-cell *matCellDef="let profesor"> {{profesor.nombre_profesor}} </td>
+    <td mat-cell *matCellDef="let profesor"> {{profesor.nom_prof}} </td>
   </ng-container>
 
   
   <ng-container matColumnDef="ape_prof">
     <th mat-header-cell *matHeaderCellDef> Apellido </th>
-    <td mat-cell *matCellDef="let profesor"> {{profesor.apellido_profesor}} </td>
+    <td mat-cell *matCellDef="let profesor"> {{profesor.ape_prof}} </td>
   </ng-container>
 
  
   <ng-container matColumnDef="correo_prof">
     <th mat-header-cell *matHeaderCellDef> Correo </th>
-    <td mat-cell *matCellDef="let profesor"> {{profesor.correo_profesor}} </td>
+    <td mat-cell *matCellDef="let profesor"> {{profesor.cor_prof}} </td>
   </ng-container>
+
+  <ng-container matColumnDef="h_e">
+      <th mat-header-cell *matHeaderCellDef> Horas estipuladas </th>
+      <td mat-cell *matCellDef="let profesor"> {{profesor.horas_est}} </td>
+    </ng-container>
 
   
 
