--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
                 <mat-icon>menu_open</mat-icon>
               </button>
               
-              Oferta academica   </mat-toolbar>
+              Oferta academica  
+            
+            </mat-toolbar>
 
 <mat-sidenav-container  [class.sidenav-container-main-login]="loginService.userLog == null"  [class.sidenav-container-main]="loginService.userLog !== null" >
     <mat-sidenav *ngIf="loginService.userLog !== null" mode="side" [(opened)]="opened" [mode]="mobileQuery.matches ? 'over' : 'side'" class="sidenav-main" class="sidenav-main">
@@ -17,5 +19,13 @@
   
 
 </mat-sidenav-container>
+
+<mat-card class="eventos-ventana">
+
+    <button class="browser-default" mat-icon-button (click)="Minimizar()"><mat-icon>remove
+        </mat-icon></button>
+    <button mat-icon-button (click)="Maximizar()"><mat-icon *ngIf="maximizado == false">fullscreen</mat-icon> <mat-icon *ngIf="maximizado == true">fullscreen_exit</mat-icon> </button>
+    <button mat-icon-button (click)="Cerrar()"><mat-icon>close</mat-icon></button>
+</mat-card>
 
 
