ahora avisa si el profesor esta ocupado en X hora

--- a/src/app/Components/inicio/inicio.component.css
+++ b/src/app/Components/inicio/inicio.component.css
@@ -1,5 +1,5 @@
 .imgbg{
-    background: url('../../../assets/images/clouds-cloudy-cold-167699.jpg') no-repeat center center fixed; 
+    background: url('../../../assets/images/login.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
      -moz-background-size: cover;
     -o-background-size: cover;
