--- a/src/app/Components/materias/materias.component.css
+++ b/src/app/Components/materias/materias.component.css
@@ -22,3 +22,17 @@
  .select_per{
    margin-top: 20px;
  }
+
+ button:focus {
+   background-color: transparent !important;
+ }
+
+#editado {
+  background-color: #98b9df !important;
+}
+.seleccionado{
+  background-color:#d2e1ee !important;
+}
+.noseleccionado{
+  background-color: white !important;;
+}
