--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,15 @@
 <mat-toolbar class="BarraMenu " class="blue darken-4 white-text" *ngIf="loginService.userLog !== null"> 
         <button mat-icon-button color="white-text" class="btn-menu-sidenav hide-on-large-only " (click)="ToggleSidenav()">
                 <mat-icon>menu_open</mat-icon>
+                
               </button>
-              
-              Oferta academica  
+              <img src="./assets/images/unefaLogo.png" width="60px" height="60px">
+              SIGEOFAU
               <div class="coordinador" *ngIf="coordinador"> {{coordinador.nom_coor}} {{coordinador.ape_coor}} </div>
+              <span class="nombre-coor">{{loginService.nombreUser}}</span>
+              <span class="example-spacer"></span>
+              <span class="hora">{{hora}}</span>
+
             </mat-toolbar>
 
 <mat-sidenav-container  [class.sidenav-container-main-login]="loginService.userLog == null"  [class.sidenav-container-main]="loginService.userLog !== null" >
