--- a/src/app/Components/dialog/borrar/borrar.component.css
+++ b/src/app/Components/dialog/borrar/borrar.component.css
@@ -1,10 +1,15 @@
 .btn-accept{
-    background-color: #085fa7;
+    margin-left: 10%;
     
 }
 
+
 .btn-cancel{
-    background-color: red;
+    margin-right: 10%;
+}
+
+.btn-cancel:focus{
+    background-color: rgb(199, 61, 61);
 }
 
 .title-borrar{
