--- a/src/app/Components/dialog/borrar/borrar.component.html
+++ b/src/app/Components/dialog/borrar/borrar.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title class="title-borrar">Seguro que quieres borrar?</div>
 <div mat-dialog-action>
-  <button mat-button class="btn-is" (click)="Aceptar()">Aceptar</button>
-  <button mat-button class="btn-is" (click)="Cancelar()">Cancelar</button>
+  <button mat-raised-button class="btn-accept left light-blue darken-4" (click)="Aceptar()">Aceptar</button>
+  <button mat-raised-button class="btn-cancel right" (click)="Cancelar()">Cancelar</button>
 </div>
