--- a/src/app/Components/horario/horario.component.html
+++ b/src/app/Components/horario/horario.component.html
@@ -8,15 +8,13 @@
     </mat-panel-description>
   </mat-expansion-panel-header>
  
-<div>
-  <span>Carrera: {{info.carrera}}</span><br>
+<div *ngIf="info">
+  <span>Carrera: {{info.carrera}}</span><button class="right light-blue darken-4" mat-mini-fab (click)="back()"><mat-icon>arrow_back</mat-icon></button><br>
   <span>Turno: {{info.turno}}</span> <br>
-  <span>Seccion Siceu: {{info.codigo_siceu}} <button *ngIf="info.codigo_siceu == null"  class="btn waves-effect waves-light  light-blue darken-4" type="submit" (click)="openDialogSemestreSec(info)">
-    <i class="material-icons right">add</i>
-  </button>  </span> <br>
+  <span>Seccion Siceu: {{info.codigo_siceu}}</span> <br>
   <span>Semestre: {{info.semestre}} </span> <br>
-  <span>Aula: {{info.Aula}} <button *ngIf="info.Aula == null" class="btn waves-effect waves-light  light-blue darken-4" type="submit" (click)="openDialogAulasSec(info)">Asignar
-    <i class="material-icons right">add</i>
+  <span>Aula: {{info.aula}} <button *ngIf="info && info.aula == null" mat-mini-fab class="light-blue darken-4" type="submit" (click)="openDialogAulasSec(info)">
+    <mat-icon>edit</mat-icon>
   </button>  </span> <br>
 </div>
 
@@ -38,37 +36,37 @@
   <!-- Name Column -->
   <ng-container matColumnDef="Lunes">
     <th mat-header-cell *matHeaderCellDef> Lunes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'L',hora.lunes)"> {{getNameOfMateriaById(hora.lunes)}}</td>
+    <td mat-cell *matCellDef="let hora" (click)="asignarMateria(hora,'L',hora.lunes)"> {{getNameOfMateriaById(hora.lunes)}}</td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="Martes">
     <th mat-header-cell *matHeaderCellDef> Martes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'M',hora.martes)" > {{getNameOfMateriaById(hora.martes)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="asignarMateria(hora,'M',hora.martes)" > {{getNameOfMateriaById(hora.martes)}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="Miercoles">
     <th mat-header-cell *matHeaderCellDef> Miercoles </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'X',hora.miercoles)"> {{getNameOfMateriaById(hora.miercoles)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="asignarMateria(hora,'X',hora.miercoles)"> {{getNameOfMateriaById(hora.miercoles)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Jueves">
     <th mat-header-cell *matHeaderCellDef> Jueves </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'J',hora.jueves)"> {{getNameOfMateriaById(hora.jueves)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="asignarMateria(hora,'J',hora.jueves)"> {{getNameOfMateriaById(hora.jueves)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Viernes">
     <th mat-header-cell *matHeaderCellDef> Viernes </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'V',hora.viernes)"> {{getNameOfMateriaById(hora.viernes)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="asignarMateria(hora,'V',hora.viernes)"> {{getNameOfMateriaById(hora.viernes)}} </td>
   </ng-container>
 
    <!-- Symbol Column -->
    <ng-container matColumnDef="Sabado">
     <th mat-header-cell *matHeaderCellDef> Sabado </th>
-    <td mat-cell *matCellDef="let hora" (click)="elemento(hora,'S',hora.sabado)"> {{getNameOfMateriaById(hora.sabado)}} </td>
+    <td mat-cell *matCellDef="let hora" (click)="asignarMateria(hora,'S',hora.sabado)"> {{getNameOfMateriaById(hora.sabado)}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnasHorario"></tr>
