--- a/src/app/Components/recovery-password/recovery-password.component.html
+++ b/src/app/Components/recovery-password/recovery-password.component.html
@@ -1,6 +1,6 @@
 <div class="imgbgl ">
     <div class="row fh mb">
-      <div class="col s8"></div>
+      <div class="col s8"> <img src="./assets/images/unefaLogo.png" width="120px" height="120px"></div>
 
       <div class="container recopass valign-wrapper col s4 fh  white" >
 
